
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pingera-mcp-server"
version = "0.1.0"
description = "MCP Server for Pingera monitoring service"
authors = [
    {name = "Pingera Team", email = "privet@pingera.ru"},
]
dependencies = [
    "mcp>=1.2.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "urllib3>=2.5.0",
    "fastmcp>=2.11.2",
    "pytest-cov>=6.2.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["pingera"]
include = ["*.py", "pingera/*.py"]

[project.scripts]
pingera-mcp = "main:main"
